{feat} adaptation of the template to the "saludo" view

--- a/proyecto1/proyecto1/plantillas/plantilla.html
+++ b/proyecto1/proyecto1/plantillas/plantilla.html
@@ -3,5 +3,8 @@
         <h1>
             Hola mundo 2.0
         </h1>
+        <h2>
+            Hola soy {{nombre_persona}}
+        </h2>
     </body>
 </html>
