[feat] adaptation of the template to "saludo" view

--- a/proyecto1/proyecto1/plantillas/plantilla.html
+++ b/proyecto1/proyecto1/plantillas/plantilla.html
@@ -4,7 +4,7 @@
             Hola mundo 2.0
         </h1>
         <h2>
-            Hola soy {{nombre_persona}}
+            Hola soy {{nombre_persona}} {{nombre_persona1}}
         </h2>
     </body>
 </html>
