[feat] add "fecha" parameter to "saludo" view

--- a/proyecto1/proyecto1/plantillas/plantilla.html
+++ b/proyecto1/proyecto1/plantillas/plantilla.html
@@ -6,5 +6,6 @@
         <h2>
             Hola soy {{nombre_persona}} {{nombre_persona1}}
         </h2>
+        <p> La fecha es: {{fecha}}</p>
     </body>
 </html>
