[feat] use parameter properties

--- a/proyecto1/proyecto1/plantillas/plantilla.html
+++ b/proyecto1/proyecto1/plantillas/plantilla.html
@@ -7,5 +7,7 @@
             Hola soy {{nombre_persona}} {{nombre_persona1}}
         </h2>
         <p> La fecha es: {{fecha}}</p>
+        <p> La fecha bonita es: {{fecha.day}} / {{fecha.month}} / {{fecha.year}}</p>
+        
     </body>
 </html>
