--- a/proyecto1/proyecto1/plantillas/plantilla.html
+++ b/proyecto1/proyecto1/plantillas/plantilla.html
@@ -8,6 +8,6 @@
         </h2>
         <p> La fecha es: {{fecha}}</p>
         <p> La fecha bonita es: {{fecha.day}} / {{fecha.month}} / {{fecha.year}}</p>
-        
+        <p> La persona con la clase persona es: {{np}} {{ap}}</p>
     </body>
 </html>
