[feat] upper method

--- a/proyecto1/proyecto1/plantillas/plantilla.html
+++ b/proyecto1/proyecto1/plantillas/plantilla.html
@@ -4,7 +4,7 @@
             Hola mundo 2.0
         </h1>
         <h2>
-            Hola soy {{nombre_persona}} {{nombre_persona1}}
+            Hola soy {{nombre_persona.upper}} {{nombre_persona1.upper}}
         </h2>
         <p> La fecha es: {{fecha}}</p>
         <p> La fecha bonita es: {{fecha.day}} / {{fecha.month}} / {{fecha.year}}</p>
@@ -19,7 +19,7 @@
                 {% endfor %}
             </ul>
         </p>
-        
+
         <p>Bucle lista vacia:</p>
         <p>
             <ul>
