--- a/proyecto1/proyecto1/plantillas/plantilla.html
+++ b/proyecto1/proyecto1/plantillas/plantilla.html
@@ -20,7 +20,7 @@
         {%endif%}
 
         <h2>
-            Hola soy {{nombre_persona.upper}} {{nombre_persona1.upper}}
+            Hola soy {{nombre_persona |upper}} {{nombre_persona1.upper}}
         </h2>
         <p> La fecha es: {{fecha}}</p>
         <p> La fecha bonita es: {{fecha.day}} / {{fecha.month}} / {{fecha.year}}</p>
